again rename attributes; back to ArrayDeque but i can see no performance differences